--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 </head>
 <body>
     <div class="container">
-        <div class="kid">don't be gay</div>
-        <div class="kid">don't be gay</div>
-        <div class="kid">don't be gay</div>
-        <div class="kid">don't be gay</div>
+        <div class="kid">You are gay</div>
+        <div class="kid">You are gay</div>
+        <div class="kid">You are gay</div>
+        <div class="kid">You are gay</div>
     </div>
 </body>
 </html>
